--- a/index.htm
+++ b/index.htm
@@ -10,10 +10,17 @@
 </head>
 <body>
 	<div class="container">
+		<nav class="hidden-menu">
+			<a href="#" class="close-menu"><i class="fa fa-times" aria-hidden="true"></i></a>
+			<ul>
+				<li><a href="#">home</a></li>
+				<li><a href="#">about</a></li>
+				<li><a href="#">help</a></li>
+				<li><a href="#">contact</a></li>
+			</ul>
+		</nav>
 		<div class="navbar">
-			<a href="#">
-				<i class="fa fa-bars" aria-hidden="true"></i>
-			</a>
+			<a href="#" class="open-menu"><i class="fa fa-bars" aria-hidden="true"></i></a>
 			<span>Timeline</span>
 			<div class="profile-picture">
 				<img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="img">
@@ -80,5 +87,9 @@
 			<a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
 		</footer>
 	</div>
+
+	<!-- scripts -->
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
