--- a/index.htm
+++ b/index.htm
@@ -89,7 +89,7 @@
 	</div>
 
 	<!-- scripts -->
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="assets/js/jquery-3.2.1.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
