--- a/timeline/index.htm
+++ b/timeline/index.htm
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Timeline</title>
+
+	<!-- styles-->
 	<link rel="stylesheet" href="style.css">
 
 	<!-- fonts -->
@@ -19,6 +21,7 @@
 				<li><a href="#">contact</a></li>
 			</ul>
 		</nav>
+
 		<div class="navbar">
 			<a href="#" class="open-menu"><i class="fa fa-bars" aria-hidden="true"></i></a>
 			<span>Timeline</span>
@@ -49,6 +52,7 @@
 						<h4>Lorem ipsum</h4>
 					</div>
 				</li>
+
 				<li>
 			        <div class="bullet green"></div>
 			        <div class="time">3 - 4pm</div>
@@ -56,12 +60,13 @@
 			          <h3>Design Stand Up</h3>
 			          <h4>Hangouts</h4>
 			          <div class="people">
-			            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/ashleyford/128.jpg" alt="" />
-			            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg" alt="" />
-			            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/mattsince87/128.jpg" alt="" />
+			            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/ashleyford/128.jpg" alt="img">
+			            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg" alt="img">
+			            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/mattsince87/128.jpg" alt="img">
 			          </div>
 			        </div>
       			</li>
+
       			<li>
 			        <div class="bullet orange"></div>
 			        <div class="time">12pm</div>
@@ -70,6 +75,7 @@
 			        </div>
 		      	</li>
 				<li>
+
 			        <div class="bullet green"></div>
 			        <div class="time">9 - 11am</div>
 			        <div class="desc">
@@ -77,6 +83,7 @@
 			          <h4>Web App</h4>
 			        </div>
 		      	</li>
+
 			</ul>
 		</article>
 
@@ -87,6 +94,12 @@
 			<a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
 		</footer>
 	</div>
+	
+	<!-- author -->
+	<a href="https://vk.com/anbigcod" class="author" title="click me">
+		made with love:
+		<i class="fa fa-heartbeat" aria-hidden="true"></i>
+	</a>
 
 	<!-- scripts -->
 	<script src="assets/js/jquery-3.2.1.min.js"></script>
